k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingoarc-service
  namespace: default
  labels:
    app: lingoarc-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: lingoarc-web
